App igrp better with performance issues and lint improvs